<resources>
    <string name="app_name">Scan Server</string>
    <string-array name="AuthTypes">
        <item>None</item>
        <item>SSL</item>
        <item>TLS</item>
    </string-array>

    <string-array name="ZPLCheckmarkTypes">
        <item>Checkmark With Box</item>
        <item>Day of week inside circle</item>
        <item>Day of month inside circle</item>
    </string-array>

    <string name="trialInfo">
        This is a 15 Day Trial Period. By accepting this trial period, you understand, accept and agree to the End User License Agreement.
        This trial period cannot be extended in any way; should you want to continue to use this software after the trial period, a license key and a software maintenance agreement must be purchased.
        To obtain this, please contact your service provider.
    </string>

    <string name="keyContactInfo">
        To obtain a key, please contact your service provider.
    </string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="ok">Ok</string>
    <string name="error">Error</string>
    <string name="error_validation_qr_code">Verification failed</string>
    <string name="stay_too_long">Timeout</string>
    <string name="stay_security_too_long_message">No security badge/barcode input received. Restarting workflow.</string>
    <string name="stay_mips_too_long_message">No temperature data confirmed. Restarting workflow.</string>
    <string name="input_code">Input Code: </string>
    <string name="error_message_generic">Please contact your administrator.</string>
    <string name="canceled">Canceled</string>
    <string name="message_dashboard_setting_loading">Checking database connection.</string>
    <string name="message_dashboard_feature_explanation">When Dashboard Access is turned on, your device can scan either QR codes or IdCards by external hardware devices plugged into the kiosk.\n\nTo improve user experience will be shown dashboard screen with the bunch of customizations available for that feature.</string>
    <string name="message_validation_failed_default">Invalid code. Please contact your administrator.</string>
    <string name="enable">Enable</string>
    <string name="title_dashboard_access">Security Settings</string>
    <string name="verbiage">Security Message</string>
    <string name="logo">Logo</string>
    <string name="qr_setup">QR setup</string>
    <string name="mesage_setup">Welcome message</string>
    <string name="delete">Delete</string>
    <string name="hint_qr_code_content">String by which will be generated QR code.</string>
    <string name="error_validation_table_connection">*This feature requires SQL Database connection. Please connect and try again.</string>
    <string name="hint_validation_table_name">SQL Table Name (50 chars max)</string>
    <string name="hint_validation_error_message">Error message which will be shown if validation fails. (255 chars max)</string>
    <string name="hint_validation">Allow input data validation based on SQL Database server verification setup</string>
    <string name="title_validation_option">Scan Validation</string>
    <string name="verification">Verification</string>
    <string name="hint_verbiage">Instructions for the rest screen (255 chars max)</string>
    <string name="choose">Choose</string>
    <string name="title_feature">Badge/Barcode Scanning</string>
    <string name="question">Question: </string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="email_no_mask">Mask</string>
    <string name="write_data_to_sql_server">Write Data To SQL Server</string>

</resources>
