<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingBottom="@dimen/large_225">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".dashboard.DashboardSettingsActivity">

        <RelativeLayout
            android:id="@+id/dashboard_settings_focus_trick"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <requestFocus />
        </RelativeLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/dashboard_settings_switch_enable_feature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/large_225"
            android:paddingEnd="@dimen/normal_150"
            android:text="@string/title_feature"
            android:theme="@style/ThemeOverlay.App.Switch"
            app:layout_constraintBottom_toTopOf="@+id/dashboard_settings_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/dashboard_settings_top_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/normal_100"
            android:layout_marginEnd="@dimen/normal_100"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/dashboard_settings_layout_feature_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/normal_150"
            android:paddingTop="@dimen/normal_100"
            android:paddingEnd="@dimen/normal_100">

            <ImageView
                android:id="@+id/dashboard_settings_img_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_error_outline" />

            <TextView
                android:id="@+id/dashboard_settings_txt_feature_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_150"
                android:text="@string/message_dashboard_feature_explanation" />
        </LinearLayout>

        <TextView
            android:id="@+id/dashboard_settings_validation_txt_database_connection_error"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_225"
            android:layout_marginTop="@dimen/small_100"
            android:text="@string/error_validation_table_connection"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="@color/design_default_color_error"
            android:visibility="gone"
            tools:visibility="visible" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dashboard_settings_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_settings_top_separator">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dashboard_settings_edit_instructions"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_100"
                android:layout_marginEnd="@dimen/normal_100"
                app:helperText="@string/hint_verbiage"
                app:helperTextEnabled="true"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/dashboard_settings_title_txt_instructions"
                app:layout_constraintTop_toBottomOf="@+id/dashboard_settings_title_txt_instructions">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:maxLength="255"
                    android:minLines="5"
                    android:nestedScrollingEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/dashboard_settings_layout_validation_table"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dashboard_settings_edit_instructions">

                <TextView
                    android:id="@+id/textView6"
                    style="@style/Style.Settings.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_100"
                    android:text="@string/verification" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/dashboard_settings_validation_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_100"
                    android:background="?attr/selectableItemBackground"
                    android:paddingStart="@dimen/normal_150"
                    android:paddingTop="@dimen/normal_100"
                    android:paddingEnd="@dimen/normal_150"
                    android:paddingBottom="@dimen/normal_100">

                    <ImageView
                        android:id="@+id/dashboard_settings_validation_img_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_spellcheck"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/dashboard_settings_switch_enable_validation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/dashboard_settings_validation_txt_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/normal_150"
                        android:text="@string/title_validation_option"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        app:layout_constraintBottom_toTopOf="@+id/textView5"
                        app:layout_constraintStart_toEndOf="@id/dashboard_settings_validation_img_icon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_validation"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/dashboard_settings_switch_enable_validation"
                        app:layout_constraintStart_toStartOf="@+id/dashboard_settings_validation_txt_title"
                        app:layout_constraintTop_toBottomOf="@+id/dashboard_settings_validation_txt_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dashboard_settings_edit_validation_table_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/large_225"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/normal_100"
                    app:helperText="@string/hint_validation_table_name"
                    app:helperTextEnabled="true"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="text"
                        android:maxLength="255"
                        android:nestedScrollingEnabled="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dashboard_settings_edit_validation_error_message"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/large_225"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/normal_100"
                    app:helperText="@string/hint_validation_error_message"
                    app:helperTextEnabled="true"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|top"
                        android:inputType="textMultiLine"
                        android:maxLength="255"
                        android:minLines="5"
                        android:nestedScrollingEnabled="true" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>



            <Button
                android:id="@+id/dashboard_settings_btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="Save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dashboard_settings_layout_validation_table" />





            <TextView
                android:id="@+id/dashboard_settings_title_txt_instructions"
                style="@style/Style.Settings.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_100"
                android:text="@string/verbiage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>

